syntax = "proto3";

package com.strandhvilliam.ordermanagement.grpc;

option java_package = "com.strandhvilliam.ordermanagement.grpc";
option java_outer_classname = "OrderProto";
option java_multiple_files = true;

service OrderManagementService {
  rpc CreateOrder(CreateOrderRequest) returns (OrderResponse) {}
}

message CreateOrderRequest {
  string customerId = 1;
  repeated string productIds = 3;
}

message OrderResponse {
  string id = 1;
  string date = 2;
  string userId = 3;
  string restaurantId = 4;
  string status = 5;
  repeated OrderItem items = 6;
}

message OrderItem {
  string id = 1;
  string productId = 2;
  string description = 3;
  double cost = 4;
}
